--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -10,10 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet"
-          th:href="@{/css/main.css}"/>
-
-
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
 
 
@@ -59,17 +56,27 @@
 
         	<tr th:each="student, iterator : ${students}" >
         		<td th:text="${iterator.index + 1}" th:onclick="|studentInfo('${student.id}');|"></td>
-        		<td th:text="${student.firstname}" th:onclick="|studentInfo('${student.id}');|"></td>
-        		<td th:text="${student.lastname}" th:onclick="|studentInfo('${student.id}');|"></td>
-        		<td > <span  th:text="${student.email}" th:onclick="|studentInfo('${student.id}');|"></span>
-        		<span>
-        			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle-fill float-right pointer" style="color: #d3d3d3" viewBox="0 0 16 16" th:onclick="|deleteStudent('${student.id}');|">
-          <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
-        </svg>
-        		</span>
+        		<td th:text="${student.firstname}"></td>
+        		<td th:text="${student.lastname}"></td>
+        		<td>
+              <form th:method="DELETE" th:action="@{/{id}(id=${student.id})}">
+                <span th:text="${student.email}"></span>
+                <button type="submit" style="border-width: 0">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-x-circle-fill float-right pointer"
+                    style="color: #d3d3d3"
+                    viewBox="0 0 16 16">
+                      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
+                  </svg>
+                </button>
+
+              </form>
         		</td>
         	</tr>
-
     </table>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
