--- a/src/main/resources/templates/studentInformation.html
+++ b/src/main/resources/templates/studentInformation.html
@@ -174,6 +174,8 @@
   </div>
 </div>
 
+<form id="deleteForm" action="/" th:method="delete" style="display:none;"></form>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
